k8s/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubepulse-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubepulse-frontend
  template:
    metadata:
      labels:
        app: kubepulse-frontend
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: frontend
        image: ghcr.io/miketomlin19/kubepulse-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
